bluec-tests/tests/invalid/types_bool/invalid_type_specifier2.c
int main(void)
{
    int _Bool x = 10;
    return x;
}